--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>CoffeShop</title>
+        <link rel="icon" type="image" href=""
     </head>
     <body>
-        <h1>CoffeShop landing page</h1>
-        <meta name="description" content="Description of the webapge">
-        <meta name="keywords" content="Comman, Separated, Keywords">
+        <h1>CoffeShop project</h1>
         <meta name="author" content="Chukwuka">
         
     </body>
