--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>CoffeShop</title>
-        <link rel="icon" type="image" href=""
+        <link rel="icon" type="image" 
+        href="https://practicum-content.s3.us-west-1.amazonaws.com/web-code/favicon.ico">
     </head>
     <body>
         <h1>CoffeShop project</h1>
