--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>CoffeShop</title>
+        <meta name="author" content="Chukwuka">
         <link rel="icon" type="image" 
         href="https://practicum-content.s3.us-west-1.amazonaws.com/web-code/favicon.ico">
     </head>
     <body>
-        <h1>CoffeShop project</h1>
-        <meta name="author" content="Chukwuka">
-        
+        <h1>Specialty coffee</h1>
+        <h2>in the Triple Peaks Library</h2>  
     </body>
 </html>
