--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>CoffeShop</title>
         <meta name="author" content="Chukwuka">
-        <link rel="icon" type="image" 
-        href="https://practicum-content.s3.us-west-1.amazonaws.com/web-code/favicon.ico">
+        <link rel="shortcut icon" href="favicon.ico"/>
+        <link rel="stylesheet" href="./vendor/normalize.css"/>
     </head>
     <body>
         <h1>Specialty coffee</h1>
