--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="author" content="Chukwuka">
         <link rel="shortcut icon" href="favicon.ico"/>
         <link rel="stylesheet" href="./vendor/normalize.css"/>
-        <link rel="stylesheet" href="./styles/style.css"/>
+        <link rel="stylesheet" href="./index/index.css"/>
     </head>
     <body>
         <h1>Specialty coffee</h1>
