--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
         <meta name="author" content="Chukwuka">
         <link rel="shortcut icon" href="favicon.ico"/>
         <link rel="stylesheet" href="./vendor/normalize.css"/>
-        <link rel="stylesheet" href="./index/index.css"/>
+        <link rel="stylesheet" href="./styles/style.css"/>
     </head>
-    <body>
-        <h1>Specialty coffee</h1>
-        <h2>in the Triple Peaks Library</h2>  
-    </body>
+    <body></body>
 </html>
