--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>CoffeShop</title>
         <meta name="author" content="Chukwuka">
         <link rel="shortcut icon" href="favicon.ico"/>
-        <link rel="stylesheet" href="./vendor/normalize.css"/>
+        <link rel="preconnect" href="./vendor/normalize.css"/>
         <link rel="stylesheet" href="./styles/style.css"/>
     </head>
     <body></body>
