--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <title>CoffeShop</title>
         <meta name="author" content="Chukwuka">
         <link rel="shortcut icon" href="favicon.ico"/>
-        <link rel="preconnect" href="./vendor/normalize.css"/>
-        <link rel="stylesheet" href="./styles/style.css"/>
+        <link rel="stylesheet" href="./vendor/normalize.css"/>
+        <link rel="preconnect" href="./index/index.css"/>
     </head>
     <body></body>
 </html>
