--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>CoffeShop</title>
         <meta name="author" content="Chukwuka">
-        <link rel="shortcut icon" href="favicon.ico"/>
+        <link rel="icon" type="image" 
+        href="https://practicum-content.s3.us-west-1.amazonaws.com/web-code/moved_playlist-favicon.ico">
         <link rel="stylesheet" href="./vendor/normalize.css"/>
-        <link rel="preconnect" href="./index/index.css"/>
+        <link rel="stylesheet" href="./styles/style.css"/>
+        <style>
+            h1 {
+                font-size: 400;
+                font-style: italic;
+            }
+        </style>
     </head>
     <body></body>
 </html>
