--- a/index.html
+++ b/index.html
@@ -5,14 +5,17 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>CoffeShop</title>
         <meta name="author" content="Chukwuka">
-        <link rel="icon" type="image" 
-        href="https://practicum-content.s3.us-west-1.amazonaws.com/web-code/moved_playlist-favicon.ico">
+        <link rel="icon" type="favicon.ico" 
+        href="https://practicum-content.s3.us-west-1.amazonaws.com/web-code/favicon.ico">
         <link rel="stylesheet" href="./vendor/normalize.css"/>
         <link rel="stylesheet" href="./styles/style.css"/>
         <style>
             h1 {
-                font-size: 400;
+                font-size: 400px;
                 font-style: italic;
+            }
+            h2 {
+                font-size: 400px 500px 700px;
             }
         </style>
     </head>
