--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
         <title>CoffeShop</title>
         <meta name="author" content="Chukwuka">
         <link rel="shortcut icon" href="favicon.ico"/>
+        <style>
+            h1 {
+                font-style: italic;
+            }
+        </style>
         <link rel="stylesheet" href="./vendor/normalize.css"/>
         <link rel="stylesheet" href="./styles/style.css"/>
     </head>
