--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>CoffeShop</title>
+        <title>CoffeeShop</title>
         <meta name="author" content="Chukwuka">
         <link rel="shortcut icon" href="favicon.ico"/>
+        <link rel="shortcut config" href="editorconfig"/>
         <style>
             h1 {
                 font-style: italic;
