--- a/index.html
+++ b/index.html
@@ -6,13 +6,12 @@
         <title>CoffeeShop</title>
         <meta name="author" content="Chukwuka">
         <link rel="shortcut icon" href="favicon.ico"/>
-        <link rel="shortcut config" href="editorconfig"/>
         <style>
             h1 {
                 font-style: italic;
             }
         </style>
-        <link rel="stylesheet" href="./vendor/normalize.css"/>
+        <link rel="stylesheet" href="./vendor/editorconfig/normalize.css"/>
         <link rel="stylesheet" href="./styles/style.css"/>
     </head>
     <body></body>
