--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
                 font-style: italic;
             }
         </style>
-        <link rel="stylesheet" href="./vendor/editorconfig/normalize.css"/>
+        <link rel="stylesheet" href="./vendor/normalize.css"/>
         <link rel="stylesheet" href="./styles/style.css"/>
     </head>
     <body></body>
