--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             }
         </style>
         <link rel="stylesheet" href="./vendor/normalize.css"/>
-        <link rel="stylesheet" href="./styles/style.css"/>
+        <link rel="stylesheet" href="./index.css"/> 
     </head>
     <body></body>
 </html>
