--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>CoffeeShop</title>
+        <meta name="description" content="in the Triple Peaks Library">
+        <meta name="keywords" content="html, css, javascript">
+        <title>Specialty Coffee</title>
         <meta name="author" content="Chukwuka">
         <link rel="shortcut icon" href="favicon.ico"/>
         <style>
@@ -12,7 +14,7 @@
             }
         </style>
         <link rel="stylesheet" href="./vendor/normalize.css"/>
-        <link rel="page" href="./index.css"/> 
+        <link rel="stylesheet" href="./index.css"/> 
     </head>
     <body></body>
 </html>
