--- a/index.html
+++ b/index.html
@@ -6,15 +6,10 @@
         <meta name="description" content="in the Triple Peaks Library">
         <meta name="keywords" content="html, css, javascript">
         <title>Specialty Coffee</title>
-        <meta name="author" content="Chukwuka">
+        <meta name="author" content="Chukwuka Arimah">
         <link rel="shortcut icon" href="favicon.ico"/>
-        <style>
-            h1 {
-                font-style: italic;
-            }
-        </style>
         <link rel="stylesheet" href="./vendor/normalize.css"/>
-        <link rel="stylesheet" href="./index.css"/> 
+        <link rel="stylesheet" href="./pages/index.css"/> 
     </head>
     <body></body>
 </html>
