--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
         <link rel="stylesheet" href="./vendor/normalize.css"/>
         <link rel="stylesheet" href="./pages/index.css"/> 
     </head>
-    <body></body>
+    <body>
+        <div class="page"></div>
+    </body>
 </html>
