--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <link rel="stylesheet" href="./pages/index.css"/> 
     </head>
     <body>
-        <div class="page"></div>
+        <div class="page">
+            testing
+        </div>
     </body>
 </html>
