--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
     </head>
     <body>
         <div class="page">
+            <header class="header"></header>
+            <main class="content"></main>
+            <footer class="footer"></footer>
         </div>
     </body>
 </html>
