--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="in the Triple Peaks Library">
         <meta name="keywords" content="html, css, javascript">
-        <title>Specialty Coffee</title>
+        <title>Triple Peaks Library</title>
         <meta name="author" content="Chukwuka Arimah">
         <link rel="shortcut icon" href="favicon.ico"/>
         <link rel="stylesheet" href="./vendor/normalize.css"/>
@@ -30,7 +30,13 @@
         <div class="page">
             <header class="header"></header>
             <main class="content">
-                <section class="events"></section>
+                <section class="Recipes">
+                    <section class="Book a table">
+                        <section class="Menu">
+                            <section class="Contacts"></section>
+                        </section>
+                    </section>
+                </section>
             </main>
             <footer class="footer"></footer>
         </div>
