--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <nav class="nav">
                     <img src="./images/logo_coffeeshop_dark.svg" alt="Coffeeshop logo" class="nav__logo"/>
                     <ul class="nav__links">
-                        <li><a href="" class="nav__link">Recipes</a></li>
+                        <li><a href="#recipes" class="nav__link">Recipes</a></li>
                         <li><a href="" class="nav__link">Book a table</a></li>
                         <li><a href="" class="nav__link">Menu</a></li>
                         <li><a href="" class="nav__link">Contacts</a></li>
