--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
                     <img src="./images/logo_coffeeshop_dark.svg" alt="Coffeeshop logo" class="nav__logo"/>
                     <ul class="nav__links">
                         <li><a href="#recipes" class="nav__link">Recipes</a></li>
-                        <li><a href="" class="nav__link">Book a table</a></li>
-                        <li><a href="" class="nav__link">Menu</a></li>
-                        <li><a href="" class="nav__link">Contacts</a></li>
+                        <li><a href="#book a table" class="nav__link">Book a table</a></li>
+                        <li><a href="#menu" class="nav__link">Menu</a></li>
+                        <li><a href="#contacts" class="nav__link">Contacts</a></li>
                     </ul>
                 </nav>
                 <h1 class="header__title"><span class="header__span-accent">Specialty Coffee</span> in the Triple Peaks Liabrary</h1>
@@ -41,7 +41,7 @@
                 </div>
             </header>
             <main class="content">
-                <section class="recipes">
+                <section id="recipes_id" class="recipes">
                     <h2 class="recipes__title">Recipes</h2>
                     <p class="recipes__subtitle">Check out some recipes we've collected for your home-brewing convenience:
                     </p>
@@ -56,9 +56,9 @@
                         </div>
                     </div>
                 </section>
-                <section class="reservation"></section>
-                <section class="menu"></section>
-                <section class="about"></section>
+                <section id="book a table_id" class="reservation"></section>
+                <section id="menu_id" class="menu"></section>
+                <section id="Contacts_id" class="about"></section>
             </main>
             <footer class="footer"></footer>
         </div>
