--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <img src="./images/logo_coffeeshop_dark.svg" alt="Coffeeshop logo" class="nav__logo"/>
                     <ul class="nav__links">
                         <li><a href="#recipes" class="nav__link">Recipes</a></li>
-                        <li><a href="#book a table" class="nav__link">Book a table</a></li>
+                        <li><a href="#book-a-table" class="nav__link">Book a table</a></li>
                         <li><a href="#menu" class="nav__link">Menu</a></li>
                         <li><a href="#contacts" class="nav__link">Contacts</a></li>
                     </ul>
@@ -47,11 +47,11 @@
                     </p>
                     <div class="recipes__videos">
                         <div>
-                        <iframe src="https://www.youtube.com/watch?v=j6VlT_jUVPc " frameborder="0" class="recipes__iframe"></iframe>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/j6VlT_jUVPc?si=_5cTDhClawzMm29P" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                         <p class="recipes__videos-caption"><span>Aeropress recipe</span> ~5 min</p>
                         </div>
                         <div>
-                        <iframe src="https://www.youtube.com/watch?v=st571DYYTR8" frameborder="0" class="recipes__iframe"></iframe>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/st571DYYTR8?si=DmPSVcJStp41-7cz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                         <p class="recipes__videos-caption"><span>French press recipe</span> ~15 min</p>
                         </div>
                     </div>
