--- a/index.html
+++ b/index.html
@@ -47,18 +47,18 @@
                     </p>
                     <div class="recipes__videos">
                         <div>
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/j6VlT_jUVPc?si=_5cTDhClawzMm29P" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                            <iframe src="https://www.youtube.com/embed/j6VlT_jUVPc?si=_5cTDhClawzMm29P" title="YouTube video player" class="recipes__iframe" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                         <p class="recipes__videos-caption"><span>Aeropress recipe</span> ~5 min</p>
                         </div>
                         <div>
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/st571DYYTR8?si=DmPSVcJStp41-7cz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                            <iframe src="https://www.youtube.com/embed/st571DYYTR8?si=DmPSVcJStp41-7cz" title="YouTube video player" class="recipes__iframe" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                         <p class="recipes__videos-caption"><span>French press recipe</span> ~15 min</p>
                         </div>
                     </div>
                 </section>
-                <section id="book a table_id" class="reservation"></section>
-                <section id="menu_id" class="menu"></section>
-                <section id="Contacts_id" class="about"></section>
+                <section id="book a table id" class="reservation"></section>
+                <section id="menu id" class="menu"></section>
+                <section id="Contacts id" class="about"></section>
             </main>
             <footer class="footer"></footer>
         </div>
