--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </div>
             </header>
             <main class="content">
-                <section id="recipes_id" class="recipes">
+                <section id="recipes" class="recipes">
                     <h2 class="recipes__title">Recipes</h2>
                     <p class="recipes__subtitle">Check out some recipes we've collected for your home-brewing convenience:
                     </p>
@@ -56,11 +56,11 @@
                         </div>
                     </div>
                 </section>
-                <section id="book a table id" class="reservation"></section>
-                <section id="menu id" class="menu"></section>
-                <section id="Contacts id" class="about"></section>
+                <section id="book-a-table" class="reservation"></section>
+                <section id="menu" class="menu"></section>
             </main>
             <footer class="footer"></footer>
+            <section id="contacts" class="about"></section>
         </div>
     </body>
 
