--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         </div>
                     </div>
                 </section>
-                <section id="book-a-table" class="reservation"></section>
+                <section id="book-a-table" class="book a table"></section>
                 <section id="menu" class="menu"></section>
             </main>
             <footer class="footer"></footer>
