--- a/index.html
+++ b/index.html
@@ -58,9 +58,10 @@
                 </section>
                 <section id="book-a-table" class="book a table"></section>
                 <section id="menu" class="menu"></section>
+                <section class="about"></section>
             </main>
             <footer class="footer"></footer>
-            <section id="contacts" class="about"></section>
+            <section id="contacts" class="contacts"></section>
         </div>
     </body>
 
