--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <section id="book-a-table" class="book a table"></section>
                 <section class="reservation">
                    <h2 class="reservation__title">Book a table</h2>
-                   <form action="" class="reservation__form form">
+                   <form class="reservation__form">
                     <fieldset class="form__fieldset">
                         <label for="" class="form__label">Name *<input type="text" class="form__input" placeholder="Name Surname">
                         </label>
