my new project2 stage3

--- a/index.html
+++ b/index.html
@@ -59,15 +59,15 @@
                 <section id="book-a-table" class="book a table"></section>
                 <section class="reservation">
                    <h2 class="reservation__title">Book a table</h2>
-                   <form action="" class="reservation__form">
+                   <form class="form reservation__form">
                     <fieldset class="form__fieldset">
-                        <label for="" class="form__label">Name *<input type="text" class="form__input" placeholder="Name Surname">
+                        <label for="name" class="form__label">Name *<input id="name"type="text" class="form__input" placeholder="Name Surname">
                         </label>
-                        <label for="" class="form__label">Number of guests *<input type="number" class="form__input" placeholder="1-8">
+                        <label for="number of guests" class="form__label">Number of guests *<input id="number of guests" type="number" class="form__input" placeholder="1-8">
                         </label>
-                        <label for="" class="form__label">Date & time *<input type="datetime-local" class="form__input">
+                        <label for="date & time" class="form__label">Date & time *<input id="date & time" type="datetime-local" class="form__input">
                         </label>
-                        <label for="" class="form__label">Your email *<input type="email" class="form__input" placeholder="email@email.com">
+                        <label for="your email" class="form__label">Your email *<input id="email" type="email" class="form__input" placeholder="email@email.com">
                         </label>
                     </fieldset>
                     <button class="form__button">Book a table</button>
