--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
                    <h2 class="reservation__title">Book a table</h2>
                    <form class="form reservation__form">
                     <fieldset class="form__fieldset">
-                        <label for="name" class="form__label">Name *<input id="name" type="name" class="form__input" placeholder="Name Surname">
+                        <label for="name" class="form__label">Name *<input id="name" type="text" class="form__input" placeholder="Name Surname">
                         </label>
-                        <label for="number-of-guests" class="form__label">Number of guests *<input id="number of guests" type="number" class="form__input" placeholder="1-8">
+                        <label for="number-of-guests" class="form__label">Number of guests *<input id="number-of-guests" type="number" class="form__input" placeholder="1-8">
                         </label>
                         <label for="date & time" class="form__label">Date & time *<input id="date & time" type="datetime-local" class="form__input">
                         </label>
