my new project 2 stage 3

--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
                         </label>
                         <label for="number-of-guests" class="form__label">Number of guests *<input id="number-of-guests" type="number" class="form__input" placeholder="1-8">
                         </label>
-                        <label for="date & time" class="form__label">Date & time *<input id="date & time" type="datetime-local" class="form__input">
+                        <label for="date-&-time" class="form__label">Date & time *<input id="date-&-time" type="datetime-local" class="form__input">
                         </label>
-                        <label for="your email" class="form__label">Your email *<input id="email" type="email" class="form__input" placeholder="email@email.com">
+                        <label for="your-email" class="form__label">Your email *<input id="your-email" type="email" class="form__input" placeholder="email@email.com">
                         </label>
                     </fieldset>
                     <button class="form__button">Book a table</button>
