--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
                         </label>
                     </fieldset>
                     <button class="form__button">Book a table</button>
-                    <label for="" class="form__label form__label_type_checkbox">
-                        <input type="checkbox" class="form__checkbox">
+                    <label for="checkbox" class="form__label form__label_type_checkbox">
+                        <input id="checkbox" type="checkbox" class="form__checkbox">
                         I agree with the terms of use
                     </label>
                    </form> 
