--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                                 <li class="card__list-item">Fresh Bug'uette<span class="card__list-divider"></span>$0.25</li>
                     </ul>
                 </section>
-                <section class="about">
+                <section id="about" class="about">
                   <h4 class="about__title">About the coffee shop</h4>
                   <div class="about__content">
                     <p class="about__paragraph">
@@ -123,30 +123,29 @@
                         Besides that,we try to reduce our environmental impact-so we don't sell single-use cups.But you can buy of our reusable cups!
                     </p>
                   </div>
-                  <div class="about__circle">
-                    <div class="about__circle_animation_blurred">pulsate</div>
-                  </div>  
+                  <div class="about__circle"></div>  
+                  <div class="about__circle about__circle_animation_blurred"></div>
                 </section>
             </main>
-            <footer class="footer">
-                    <div class="footer__content">
-                        <img src="./images/logo_coffeeshop_light.svg" alt="Triple Espresso logo" class="footer__logo"/>
-                    </div>
-                    <div class="footer__content">
+            <footer id="footer" class="footer">
+                <div class="footer__content">
+                    <img src="./images/logo_coffeeshop_light.svg" alt="Triple Espresso logo" class="footer__logo"/>
+                    <div class="footer__social">
                         <h5 class="footer__social-heading">Social media</h5>
                         <ul class="footer__list">
                             <li class="footer__list-item">
                                 <a href="#" class="footer__social-link">
-                                    <img src="./images/facebook_white.svg" alt="Facebook logo" class="footer__social-icon">
+                                    <img src="./images/facebook_white.svg" alt="Facebook logo" class="footer__social-icon"/>
                                     Facebook</a>
                             </li>
                             <li class="footer__list-item">
                                 <a href="#" class="footer__social-link">
-                                    <img src="./images/instagram_white.svg" alt="Instagram logo" class="footer__social-icon">
+                                    <img src="./images/instagram_white.svg" alt="Instagram logo" class="footer__social-icon"/>
                                     Instagram</a>
                             </li>
                         </ul>
-                    </div>
+                        </div>
+                </div>
                 <p class="footer__copyright">&copy 2023 Chukwuka</p>
                 </div>
             </footer>
