My Poject 2 stage 4

--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
                         </div>
                     </div>
                 </section>
-                <section id="book-a-table" class="book a table"></section>
-                <section class="reservation">
+                <section id="reservation" class="reservation">
                    <h2 class="reservation__title">Book a table</h2>
                    <form class="form reservation__form">
                     <fieldset class="form__fieldset">
@@ -149,7 +148,6 @@
                 <p class="footer__copyright">&copy 2023 Chukwuka</p>
                 </div>
             </footer>
-            <section id="contacts" class="contacts"></section>
         </div>
     </body>
 
